# cv_practice

./: .gitignore  README.md  inference.ipynb  pyproject.toml  yolo 11.ipynb  yolo world.ipynb  yoloE.ipynb
