[project]
name = "yolo"
version = "0.1.0"
description = ""
authors = [{ name = "Dmitry Tsapin", email = "aw3472@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "ultralytics (>=8.3.139,<9.0.0)",
    "supervision>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
